Fix combination of darks to respect exposure time

--- a/notebooks/03.06-Combine-darks-for-use-in-later-calibration-steps.ipynb
+++ b/notebooks/03.06-Combine-darks-for-use-in-later-calibration-steps.ipynb
@@ -79,12 +79,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The code below:\n",
+    "### Make a combined image for each exposure time \n",
     "\n",
-    "+ selects the calibrated bias images,\n",
-    "+ combines them using the `combine` function,\n",
-    "+ adds the keyword `COMBINED` to the header so that later calibration steps can easily identify which bias to use, and \n",
-    "+ writes the file."
+    "There are several dark exposure times in this data set. By converting the times in the summary table to a set it returns only the unique values."
    ]
   },
   {
@@ -93,18 +90,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "calibrated_darks = reduced_images.files_filtered(imagetyp='dark', include_path=True)\n",
+    "darks = reduced_images.summary['imagetyp'] == 'DARK'\n",
+    "dark_times = set(reduced_images.summary['exptime'][darks])\n",
+    "print(dark_times)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The code below loops over the dark exposure times and, for each exposure time:\n",
     "\n",
-    "combined_dark = ccdp.combine(calibrated_darks,\n",
-    "                             method='average',\n",
-    "                             sigma_clip=True, sigma_clip_low_thresh=5, sigma_clip_high_thresh=5,\n",
-    "                             sigma_clip_func=np.ma.median, signma_clip_dev_func=mad_std,\n",
-    "                             mem_limit=350e6\n",
-    "                            )\n",
+    "+ selects the relevant calibrated dark images,\n",
+    "+ combines them using the `combine` function,\n",
+    "+ adds the keyword `COMBINED` to the header so that later calibration steps can easily identify which bias to use, and \n",
+    "+ writes the file whose name includes the exposure time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for exp_time in sorted(dark_times):\n",
+    "    calibrated_darks = reduced_images.files_filtered(imagetyp='dark', exptime=exp_time,\n",
+    "                                                     include_path=True)\n",
     "\n",
-    "combined_dark.meta['combined'] = True\n",
+    "    combined_dark = ccdp.combine(calibrated_darks,\n",
+    "                                 method='average',\n",
+    "                                 sigma_clip=True, sigma_clip_low_thresh=5, sigma_clip_high_thresh=5,\n",
+    "                                 sigma_clip_func=np.ma.median, signma_clip_dev_func=mad_std,\n",
+    "                                 mem_limit=350e6\n",
+    "                                )\n",
     "\n",
-    "combined_dark.write(calibrated_path / 'combined_dark.fit')"
+    "    combined_dark.meta['combined'] = True\n",
+    "\n",
+    "    dark_file_name = 'combined_dark_{:6.3f}.fit'.format(exp_time)\n",
+    "    combined_dark.write(calibrated_path / dark_file_name)"
    ]
   },
   {
@@ -113,7 +136,7 @@
    "source": [
     "### Result\n",
     "\n",
-    "A single calibrated image and the combined image are shown below. There is significant two-dimensional structure in the bias that cannot easily be removed by subtracting only the overscan in the next image reduction steps. It takes little time to acquire bias images and doing so will result in higher quality science images."
+    "A single calibrated 300 second dark image and the combined 300 second image are shown below."
    ]
   },
   {
@@ -153,12 +176,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The code below:\n",
+    "### Make a combined image for each exposure time \n",
     "\n",
-    "+ selects the calibrated bias images,\n",
-    "+ combines them using the `combine` function,\n",
-    "+ adds the keyword `COMBINED` to the header so that later calibration steps can easily identify which bias to use, and \n",
-    "+ writes the file."
+    "In this example there are only darks of a single exposure time."
    ]
   },
   {
@@ -167,18 +187,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "calibrated_darks = reduced_images.files_filtered(imagetyp='dark', include_path=True)\n",
+    "darks = reduced_images.summary['imagetyp'] == 'DARK'\n",
+    "dark_times = set(reduced_images.summary['exptime'][darks])\n",
+    "print(dark_times)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Despite the fact that there is only one exposure time we might as well re-use the code from above. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for exp_time in sorted(dark_times):\n",
+    "    calibrated_darks = reduced_images.files_filtered(imagetyp='dark', exptime=exp_time,\n",
+    "                                                     include_path=True)\n",
     "\n",
-    "combined_dark = ccdp.combine(calibrated_darks,\n",
-    "                             method='average',\n",
-    "                             sigma_clip=True, sigma_clip_low_thresh=5, sigma_clip_high_thresh=5,\n",
-    "                             sigma_clip_func=np.ma.median, signma_clip_dev_func=mad_std,\n",
-    "                             mem_limit=350e6\n",
-    "                            )\n",
+    "    combined_dark = ccdp.combine(calibrated_darks,\n",
+    "                                 method='average',\n",
+    "                                 sigma_clip=True, sigma_clip_low_thresh=5, sigma_clip_high_thresh=5,\n",
+    "                                 sigma_clip_func=np.ma.median, signma_clip_dev_func=mad_std,\n",
+    "                                 mem_limit=350e6\n",
+    "                                )\n",
     "\n",
-    "combined_dark.meta['combined'] = True\n",
+    "    combined_dark.meta['combined'] = True\n",
     "\n",
-    "combined_dark.write(calibrated_path / 'combined_dark.fit')"
+    "    dark_file_name = 'combined_dark_{:6.3f}.fit'.format(exp_time)\n",
+    "    combined_dark.write(calibrated_path / dark_file_name)"
    ]
   },
   {
@@ -203,13 +244,6 @@
     "show_image(combined_dark.data, cmap='gray', ax=ax2, fig=fig)\n",
     "ax2.set_title('{} dark images combined'.format(len(calibrated_darks)))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
