--- a/notebooks/05.00-Flat-corrections.ipynb
+++ b/notebooks/05.00-Flat-corrections.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#What-are-flat-corrections?\" data-toc-modified-id=\"What-are-flat-corrections?-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>What are flat corrections?</a></span></li><li><span><a href=\"#Overview-of-taking-images-for-flat-corrections\" data-toc-modified-id=\"Overview-of-taking-images-for-flat-corrections-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Overview of taking images for flat corrections</a></span></li><li><span><a href=\"#Calibrating-and-combining-flat-images\" data-toc-modified-id=\"Calibrating-and-combining-flat-images-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Calibrating and combining flat images</a></span></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Flat corrections\n"
@@ -11,6 +21,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## What are flat corrections?\n",
+    "\n",
     "The purpose of flat corrections is to compensate for any non-uniformity in the response of the CCD to light. There can be several reasons that the response is not uniform across the detector:\n",
     "\n",
     "+ variations in the sensitivity of pixels in the detector, though this source is usually small.\n",
@@ -20,15 +32,37 @@
     "\n",
     "The fix for the non-uniformity is the same in all cases: take an image in which the illumination is uniform and use that to measure the response of the CCD.\n",
     "\n",
-    "Unfortunately, achieving uniform illumination is difficult, and uniform illumination with the same spectrum as the astronomical objects of interest to you is impossible.\n",
+    "Unfortunately, achieving uniform illumination is difficult, and uniform illumination with the same spectrum as the astronomical objects of interest to you is impossible."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Overview of taking images for flat corrections\n",
     "\n",
     "There are a few ways of taking \"flat\" images:\n",
     "\n",
     "+ Twilight flats are images of the sky near zenith taken around sunrise or sunset.\n",
-    "+ Dome flats are images of a flat panel on the wall of the dome, illuminated by some light source in the dome.\n",
+    "+ Dome flats are images of the inside of the dome (typically of a smooth surface, not of the dome itself),  illuminated by some light source in the dome. For smaller telescopes an electroluminescent or LED illuminated panel can be used as the light source.\n",
     "+ Sky flats are composed of several science images. \n",
     "\n",
     "Ideally the flat images have fairly high counts (roughly half the maximum counts of the detector) so that the *only* important source of error is Poisson error due to the light in the flat images, and so that the signal-to-noise ratio in those images is essentially zero."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calibrating and combining flat images\n",
+    "\n",
+    "The process of calibrating and combining flat frames is largely the same regardless of the light source being used. \n",
+    "\n",
+    "It is useful to think of flat frames as just like science images of stars or galaxies. The telescope is taking a picture of a light source, so bias and dark need to be removed from the individual images.\n",
+    "\n",
+    "When combining the images there is a new step we have not discussed yet: normalizing (also called rescaling) the calibrated flat frames to a common mean or median before combining them. In both sky and twilight flats the illumination varies naturally from frame-to-frame. If the images are not scaled to a common value before combining then the ones taken while the sky is brighter will inappropriately dominate the result. Dome flats ought, in principle, be perfectly stable with no time variation in their illumination. In practice, every light source varies at some level; if you are trying to correct 1% differences in illumination then 1% fluctuations in the light source matter. \n",
+    "\n",
+    "Typically the mean or median is scaled to 1.0 before combining so that when the science images are divided by the calibrated, combined flats the science image values do not change too much."
    ]
   }
  ],
@@ -49,6 +83,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.8"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": true,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": true,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
