--- a/notebooks/01.03-Construction-of-an-artificial-(but-realistic)-image.ipynb
+++ b/notebooks/01.03-Construction-of-an-artificial-(but-realistic)-image.ipynb
@@ -158,7 +158,7 @@
     "    value: float\n",
     "        Bias level to add.\n",
     "    realistic : bool, optional\n",
-    "        If ``True``, add some clomuns with somewhat higher bias value (a not uncommon thing)\n",
+    "        If ``True``, add some columns with somewhat higher bias value (a not uncommon thing)\n",
     "    \"\"\"\n",
     "    # This is the whole thing: the bias is really suppose to be a constant offset!\n",
     "    bias_im = np.zeros_like(image) + value\n",
