--- a/notebooks/01.03-Construction-of-an-artificial-(but-realistic)-image.ipynb
+++ b/notebooks/01.03-Construction-of-an-artificial-(but-realistic)-image.ipynb
@@ -219,7 +219,7 @@
     "\n",
     "A dark frame (or dark image) is an image taken with the camera shutter closed.\n",
     "\n",
-    "The function below simulates dark currrent only, i.e. it does *not* simulate the read noise that is a part of any actual dark frame from a CCD.\n",
+    "The function below simulates dark current only, i.e. it does *not* simulate the read noise that is a part of any actual dark frame from a CCD.\n",
     "\n",
     "Note that the simulation dark image looks noisy even though it doesn't include read noise. This is because the number of electrons generated obey a Poisson distribution."
    ]
